pkg/lang/testdata/ub/inputs/valid/enum-quoted-members.ub
inputs: {
  proto: { type: string, enum: ['tcp', 'udp'] }
}
