pkg/lang/testdata/ub/inputs/invalid/unknown-modifier.ub
inputs: {
  region: {
    type:    string
    bogus:   'x'
  }
}
